# libzstd-rs-sys

./: .gitattributes  .gitignore  Cargo.toml  README.md  benchmarks.json  build.rs  c2rust-lib.rs  re2-exhaustive.txt.zst  zip64support.tar.zst
.github/: codecov.yml
.github/workflows/: bench.yml  checks.yaml  cmake-tests.yml  dev-long-tests.yml  dev-short-tests.yml  scorecards.yml  windows-artifacts.yml
examples/: foo.rs
fuzz/: Cargo.toml
fuzz/dictionaries/: dictionary_train.txt
fuzz/fuzz_targets/: decompress.rs  decompress_overlapping.rs  dictionary_round_trip.rs  dictionary_train.rs  dictionary_train_fast.rs  dictionary_train_legacy.rs  huf_round_trip.rs
fuzz/src/: lib.rs
lib/: polyfill.rs  zdict.rs  zstd.rs
lib/common/: allocations.rs  bits.rs  bitstream.rs  debug.rs  entropy_common.rs  entropy_common_old.rs  error_private.rs  fse.rs  fse_decompress.rs  fse_decompress_old.rs  huf.rs  mem.rs  pool.rs  reader.rs  threading.rs  xxhash.rs  zstd_common.rs  zstd_internal.rs  zstd_trace.rs
lib/compress/: fse_compress.rs  hist.rs  huf_compress.rs  zstd_compress.c  zstd_compress.rs  zstd_compress_internal.rs  zstd_compress_literals.rs  zstd_compress_sequences.rs  zstd_compress_superblock.rs  zstd_double_fast.rs  zstd_fast.rs  zstd_lazy.rs  zstd_ldm.rs  zstd_opt.rs  zstd_preSplit.rs  zstdmt_compress.rs
lib/decompress/: huf_decompress.rs  mod.rs  zstd_ddict.rs  zstd_decompress.rs  zstd_decompress_block.rs
lib/dictBuilder/: cover.rs  divsufsort.rs  fastcover.rs  zdict.rs
lib/legacy/: zstd_v05.rs  zstd_v06.rs  zstd_v07.rs
programs/: benchfn.rs  benchzstd.rs  datagen.rs  dibio.rs  fileio.rs  fileio_asyncio.rs  lorem.rs  main.rs  timefn.rs  util.rs  zstdcli.c  zstdcli.rs  zstdcli_trace.rs
test-libzstd-rs-sys/: Cargo.toml
test-libzstd-rs-sys/examples/: compress.rs  decompress.rs
test-libzstd-rs-sys/src/: compress.rs  decompress.rs  dict_builder.rs  lib.rs  parameters.rs
test-libzstd-rs-sys/test-data/: The fastest WASM zlib.md.zstd-0.5.1-5.zst  The fastest WASM zlib.md.zstd-0.6.1-10.zst  The fastest WASM zlib.md.zstd-0.7.4-19.zst  The fastest WASM zlib.md.zstd-0.7.4-custom-dict.zst  The fastest WASM zlib.md.zstd-1.zst  The fastest WASM zlib.md.zstd-custom-dict.zst  The fastest WASM zlib.md.zstd-long27-19.zst  compression-corpus-0.7.4.zstd  compression-corpus.zstd
