[workspace]
members = [
]
[package]
name = "c2rust_out"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "c2rust_out"
path = "c2rust-lib.rs"
crate-type = ["staticlib", "rlib"]
[dependencies]
c2rust-bitfields= "0.3"
libc= "0.2"

[dev-dependencies]
quickcheck = "1.0.3"

[dev-dependencies.xxhash-rust]
version = "0.8.15"
features = ["xxh64", "xxh32"]
