[workspace]
members = ["test-libzstd-rs-sys"]

exclude = [ "fuzz" ]

[workspace.package]
edition = "2021"

[package]
name = "c2rust_out"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "libzstd_rs"
path = "c2rust-lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "programs"
path = "programs/main.rs"

[dependencies]
libc = "0.2"

[target.'cfg(target_arch = "x86_64")'.build-dependencies]
cc = "1.2.30"

[dev-dependencies]
quickcheck = "1.0.3"
zstd-sys = { version = "2.0.15", features = ["experimental"] }

[dev-dependencies.xxhash-rust]
version = "0.8.15"
features = ["xxh64", "xxh32"]


[features]
export-symbols = [] # whether the zlib api symbols are publicly exported
semver-prefix = ["export-symbols"] # prefix all symbols in a semver-compatible way
no-prefetch = [] # do not prefetch
