[package]
name = "c2rust_out-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
zstd-sys = { version = "2.0.15", features = ["experimental"] }

[dependencies.libzstd-rs-sys]
path = ".."
features = ["semver-prefix"]

[[bin]]
name = "decompress"
path = "fuzz_targets/decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decompress_overlapping"
path = "fuzz_targets/decompress_overlapping.rs"
test = false
doc = false
bench = false
