[package]
name = "c2rust_out-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
zstd-sys = { version = "2.0.15", features = ["experimental"] }
arbitrary = { version = "1", features = ["derive"] }

[dependencies.libzstd-rs-sys]
path = ".."
features = ["semver-prefix"]

[[bin]]
name = "decompress"
path = "fuzz_targets/decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decompress_overlapping"
path = "fuzz_targets/decompress_overlapping.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dictionary_round_trip"
path = "fuzz_targets/dictionary_round_trip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dictionary_train"
path = "fuzz_targets/dictionary_train.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dictionary_train_fast"
path = "fuzz_targets/dictionary_train_fast.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dictionary_train_legacy"
path = "fuzz_targets/dictionary_train_legacy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "huf_round_trip"
path = "fuzz_targets/huf_round_trip.rs"
test = false
doc = false
bench = false
