[package]
name = "test-libzstd-rs-sys"
readme = "README.md"
# description.workspace = true
# version.workspace = true
edition.workspace = true
# license.workspace = true
# repository.workspace = true
# homepage.workspace = true
# publish.workspace = true
# rust-version.workspace = true

[dependencies.libzstd-rs-sys]
path = ".."
features = ["semver-prefix"]

[dependencies]
zstd-sys = { version = "2.0.15", features = ["experimental"] }
